--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
   "bugs": {
     "url": "https://github.com/ghigbie/NodeTests/issues"
   },
-  "homepage": "https://github.com/ghigbie/NodeTests#readme"
+  "homepage": "https://github.com/ghigbie/NodeTests#readme",
+  "devDependencies": {
+    "mocha": "^3.2.0"
+  }
 }
