--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/ghigbie/NodeTests#readme",
   "devDependencies": {
+    "expect": "^1.20.2",
     "mocha": "^3.2.0"
   }
 }
