--- a/package.json
+++ b/package.json
@@ -20,5 +20,8 @@
   "devDependencies": {
     "expect": "^1.20.2",
     "mocha": "^3.2.0"
+  },
+  "dependencies": {
+    "express": "^4.15.2"
   }
 }
