--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
   "homepage": "https://github.com/ghigbie/NodeTests#readme",
   "devDependencies": {
     "expect": "^1.20.2",
-    "mocha": "^3.2.0"
+    "mocha": "^3.2.0",
+    "supertest": "^3.0.0"
   },
   "dependencies": {
     "express": "^4.15.2"
